<resources>
    <string name="app_name">SmartManager</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">MENU</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nhac_nho">Nhắc nhở</string>
    <string name="the_loai">    Thể loại</string>
    <string name="giai_tri">Giải trí</string>
    <string name="an_uong">Ăn uống</string>
    <string name="so_thich">Sở thích</string>
    <string name="giao_duc">Giáo dục</string>
    <string name="sinh_hoat">Sinh hoạt</string>
    <string name="ao_quan">Áo quần</string>
    <string name="lam_dep">Làm đẹp</string>
    <string name="khac">Khác</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chinh_sach_bao_mat">This Privacy Policy (the "Policy") explains the way of treatment of the information which is provided or collected in the websites on which this Policy is posted. In addition the Policy also explains the information which is provided or collected in the course of using the applications of the Company which exist in the websites or platforms of other company.<br /> Through this Policy, the Company regards personal information of the users as important and inform them of the purpose and method of Company\'s using the personal information provided by the users and the measures taken by the Company for protection of those personal information. <br />This Policy will be effective on the 1 th day of March, 2017 and, in case of modification thereof, the Company will make public notice of it through posting it on the bulletin board of Company\'s website or individual notice through sending mails, fax or e-mails).</string>


</resources>